Fix issues with frm_alignright class (#585)

--- a/css/frm_grids.css
+++ b/css/frm_grids.css
@@ -226,7 +226,6 @@
 .frm_form_field.frm_last,
 .frm_form_field.frm_alignright{
 	grid-column-end:-1;
-	grid-row-start: span 100;
 	justify-content: end;
 }
 
